--- a/SearchGitHubUsers/Info.plist
+++ b/SearchGitHubUsers/Info.plist
@@ -24,6 +24,17 @@
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>usersGitHub</string>
+			</array>
+			<key>CFBundleURLName</key>
+			<string>ua.katerinanikolaenko.SearchGitHubUsers</string>
+		</dict>
+	</array>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
